# easycabcpp

./: .env  .example-env  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  env_reference.md  main.cpp
.github/workflows/: qodana_code_quality.yml
docker/: .env  docker-compose.db.yaml  docker-compose.kafka.yaml
mysql/: initialize.sql  query.sql
res/: locations.csv  services.csv
src/: initialize.sql
src/Common/: Common.cpp  Common.h  Logs.cpp  Logs.h  PipeHandler.cpp  PipeHandler.h  Protocols.cpp  Protocols.h  SocketHandler.cpp  SocketHandler.h  Socket_Handler.cpp  Socket_Handler.h  Utils.cpp  Utils.h  common.cpp  common.h
src/Common/MySQL/: DbConnectionHandler.cpp  DbConnectionHandler.h
src/Common/Ncurses/: Common.cpp  Common.h  Window.cpp  Window.h
src/Common/Socket/: PipeHandler.cpp  PipeHandler.h  SocketHandler.cpp  SocketHandler.h
src/EC_CTC/: EC_CTC.cpp  OpenWeatherClient.cpp  OpenWeatherClient.h
src/EC_Central/: AuthServer.cpp  AuthServer.h  EC_Central.cpp  GUI.cpp  GUI.h  KafkaServer.cpp  KafkaServer.h
src/EC_Central_GUI/: EC_Central_GUI.cpp
src/EC_Customer/: EC_Customer.cpp
src/EC_DE/: EC_DE.cpp
src/EC_Registry/: EC_Registry.cpp
src/EC_SE/: EC_SE.cpp
